--- a/ansible/roles/vector/tasks/install.yml
+++ b/ansible/roles/vector/tasks/install.yml
@@ -15,7 +15,7 @@
 
 - name: "Downloading Vector ({{ version }})"
   get_url:
-    url: "http://packages.timber.io/vector/vector-v{{ version }}-x86_64-unknown-linux-gnu.tar.gz"
+    url: "http://packages.timber.io/vector/{{ version }}/vector-{{ version }}-x86_64-unknown-linux-gnu.tar.gz"
     dest: /tmp/vector.tar.gz
     mode: 0775
 
