--- a/cases/regex_parsing_performance/ansible/bootstrap.yml
+++ b/cases/regex_parsing_performance/ansible/bootstrap.yml
@@ -24,14 +24,12 @@
   tasks:
     - name: Remove previous test log file
       file:
-        path: /tmp/flog-100mib.log
+        path: /tmp/flog-100MiB.log
         state: absent
 
-    - name: Create 100mib test log file
+    - name: Create 100MiB test log file
       shell: |
-        flog --format apache_common --bytes 104857600 | \
-          jq -c --raw-input '{msg: .}' \
-          > /tmp/flog-100mib.log
+        flog --format apache_common --bytes 104857600 > /tmp/flog-100MiB.log
 
 - hosts: 'tag_TestName_{{ test_name }}:&tag_TestConfiguration_{{ test_configuration }}:&tag_TestUserID_{{ user_id }}:&tag_TestRole_subject'
   become: true
@@ -39,38 +37,43 @@
     - role: profiling
       action: install
 
-    - role: fluentbit
-      action: install
-      version: "{{ fluentbit_version }}"
-      configuration_files:
-        - src: config_files/td-agent-bit.conf
-          dest: td-agent-bit.conf
-        - src: config_files/td-agent-bit.parsers.conf
-          dest: parsers.conf
+    # - role: fluentbit
+    #   action: install
+    #   version: "{{ fluentbit_version }}"
+    #   configuration_files:
+    #     - src: config_files/td-agent-bit.conf
+    #       dest: td-agent-bit.conf
+    #     - src: config_files/td-agent-bit.parsers.conf
+    #       dest: parsers.conf
 
-    - role: fluentd
-      action: install
-      version: "{{ fluentd_version }}"
-      configuration_file: "config_files/td-agent.conf"
+    # - role: fluentd
+    #   action: install
+    #   version: "{{ fluentd_version }}"
+    #   configuration_file: "config_files/td-agent.conf"
 
-    - role: logstash
-      action: install
-      version: "{{ logstash_version }}"
-      pipeline_file: "config_files/logstash.conf"
+    # - role: logstash
+    #   action: install
+    #   version: "{{ logstash_version }}"
+    #   pipeline_file: "config_files/logstash.conf"
 
-    - role: splunk_heavy_forwarder
-      action: install
-      version_with_hash: "{{ splunk_heavy_forwarder_version }}"
-      configuration_files:
-        - src: config_files/splunk.inputs.conf
-          dest: inputs.conf
-        - src: config_files/splunk.outputs.conf
-          dest: outputs.conf
-        - src: config_files/splunk.props.conf
-          dest: props.conf
-        - src: config_files/splunk.transforms.conf
-          dest: transforms.conf
-          
+    # - role: splunk_heavy_forwarder
+    #   action: install
+    #   version_with_hash: "{{ splunk_heavy_forwarder_version }}"
+    #   configuration_files:
+    #     - src: config_files/splunk.inputs.conf
+    #       dest: inputs.conf
+    #     - src: config_files/splunk.outputs.conf
+    #       dest: outputs.conf
+    #     - src: config_files/splunk.props.conf
+    #       dest: props.conf
+    #     - src: config_files/splunk.transforms.conf
+    #       dest: transforms.conf
+    
+    # - role: telegraf
+    #   action: install
+    #   version: "{{ telegraf_version }}"
+    #   configuration_file: "config_files/telegraf.conf"
+
     - role: vector
       action: install
       version: "{{ vector_version }}"
