--- a/cases/tcp_to_tcp_performance/configurations/default/ansible.yml
+++ b/cases/tcp_to_tcp_performance/configurations/default/ansible.yml
@@ -4,6 +4,6 @@
 # based on these parameters. Please create a new configuration and specify taht
 # configuration instead.
 ---
-bytes_per_consumer: 104857600 # 100mib
+bytes_per_consumer: 104857600 # 100MiB
 subject_port: 9000
 consumer_port: 9000
