Add docker installation at ansible/ami.yml

--- a/ansible/ami.yml
+++ b/ansible/ami.yml
@@ -47,3 +47,7 @@
     - role: vector
       action: install
       version: "{{ vector_version }}"
+
+    - role: docker
+      action: install
+      version: "{{ docker_version }}"
