Use python-docker role at ansible/ami.yml

--- a/ansible/ami.yml
+++ b/ansible/ami.yml
@@ -51,3 +51,6 @@
     - role: docker
       action: install
       version: "{{ docker_version }}"
+
+    - role: python-docker
+      action: install
