--- a/cases/docker_partial_events_merging_correctness/ansible/bootstrap.yml
+++ b/cases/docker_partial_events_merging_correctness/ansible/bootstrap.yml
@@ -12,6 +12,7 @@
       action: install
     - role: docker
       action: install
+    - role: docker_socket_access
 
     # We include a TCP server in case the test subject needs it. This
     # is useful for subjects that do not include simpler output means.
