Add encoding at tcp sink

--- a/cases/docker_partial_events_merging_correctness/ansible/config_files/vector.toml
+++ b/cases/docker_partial_events_merging_correctness/ansible/config_files/vector.toml
@@ -9,6 +9,7 @@
   drop_field = true
 
 [sinks.out]
-  inputs  = ["parse_json"]
-  type    = "tcp"
-  address = "127.0.0.1:{{ tcp_consumer_port }}"
+  inputs   = ["parse_json"]
+  type     = "tcp"
+  address  = "127.0.0.1:{{ tcp_consumer_port }}"
+  encoding = "text"
