--- a/ansible/roles/python-docker/tasks/install.yml
+++ b/ansible/roles/python-docker/tasks/install.yml
@@ -1,5 +1,11 @@
 ---
-- name: Ensure python bindings for docker are installed
+- name: Ensure Python <= 2.6 bindings for docker are not installed
+  pip:
+    name:
+      - docker-py
+    state: absent
+
+- name: Ensure modern Python bindings for docker are installed
   pip:
     name:
       - docker
