--- a/ansible/roles/python-docker/tasks/install.yml
+++ b/ansible/roles/python-docker/tasks/install.yml
@@ -10,3 +10,30 @@
     name:
       - docker
     state: present
+
+# Ansible Docker is broken: it attempts to read a file that's not exposed
+# by the `docker` module. Most likely it was removed from `docker` python
+# module, potentially even by mistake.
+# See https://github.com/ansible/ansible/blob/81aabdc94f7473c2087bc71277bfdc143525c683/lib/ansible/module_utils/docker/common.py#L44
+# See https://github.com/docker/docker-py/blob/f2e09ae63287dd812ceaf936513ccf836392fab1/docker/__init__.py
+# See https://github.com/ansible/ansible/issues/62791
+# Someone should submit a PR to ansible/ansible or docker/docker-py to fix this,
+# for now we just patch things up so it works.
+- command:
+    argv:
+      - '{{ ansible_python_interpreter }}'
+      - -c
+      - import docker;print(docker.__path__.__dict__["_path"][0])
+  register: docker_py_path
+- name: Ensure the docker/__init__.py exists
+  copy:
+    dest: '{{ docker_py_path.stdout }}/__init__.py'
+    content: |
+      # flake8: noqa
+      from .api import APIClient
+      from .client import DockerClient, from_env
+      from .version import version, version_info
+
+      __version__ = version
+      __title__ = 'docker'
+    force: no
