--- a/ansible/group_vars/tag_Test_true.yml
+++ b/ansible/group_vars/tag_Test_true.yml
@@ -1,5 +1,5 @@
 ---
-ansible_ssh_private_key_file: "{{ lookup('env','VECTOR_TEST_PRIV_KEY') | default(omit) }}"
+ansible_ssh_private_key_file: "{{ lookup('env','VECTOR_TEST_SSH_PRIVATE_KEY') | default(omit) }}"
 ansible_ssh_common_args: "{{ ansible_ssh_private_key_file | ternary('-o IdentitiesOnly=yes', '') }} -o StrictHostKeyChecking=no"
 ansible_python_interpreter: "/usr/bin/python3"
 test_file_path: "/tmp/test_file_output"
