--- a/cases/disk_buffer_performance/ansible/bootstrap.yml
+++ b/cases/disk_buffer_performance/ansible/bootstrap.yml
@@ -58,7 +58,10 @@
           dest: inputs.conf
         - src: config_files/splunk.outputs.conf
           dest: outputs.conf
-          
+
+    - role: vector
+      action: install_custom_version
+
     - role: vector
       action: configure
       configuration_file: "config_files/vector.toml"
