--- a/cases/disk_buffer_persistence_correctness/ansible/bootstrap.yml
+++ b/cases/disk_buffer_persistence_correctness/ansible/bootstrap.yml
@@ -47,8 +47,10 @@
       action: configure
       http_server_address: "127.0.0.1:{{ http_consumer_port }}"
       tcp_server_address: "127.0.0.1:{{ tcp_consumer_port }}"
-          
+
+    - role: vector
+      action: install_custom_version
+
     - role: vector
       action: configure
       configuration_file: "config_files/vector.toml"
-
