--- a/cases/docker_partial_events_merging_correctness/ansible/bootstrap.yml
+++ b/cases/docker_partial_events_merging_correctness/ansible/bootstrap.yml
@@ -32,5 +32,8 @@
       action: stop
 
     - role: vector
+      action: install_custom_version
+
+    - role: vector
       action: configure
       configuration_file: "config_files/vector.toml"
