--- a/cases/tcp_to_blackhole_performance/ansible/bootstrap.yml
+++ b/cases/tcp_to_blackhole_performance/ansible/bootstrap.yml
@@ -36,7 +36,10 @@
     - role: logstash
       action: configure
       pipeline_file: "config_files/logstash.conf"
-    
+
+    - role: vector
+      action: install_custom_version
+
     - role: vector
       action: configure
       configuration_file: "config_files/vector.toml"
