--- a/cases/sighup_correctness/ansible/bootstrap.yml
+++ b/cases/sighup_correctness/ansible/bootstrap.yml
@@ -43,7 +43,10 @@
           dest: inputs.conf
         - src: config_files/splunk.outputs.conf
           dest: outputs.conf
-      
+
+    - role: vector
+      action: install_custom_version
+
     - role: vector
       action: configure
       configuration_file: "config_files/vector.toml"
@@ -54,4 +57,3 @@
     - role: tcp_test_server
       action: configure
       server_address: "0.0.0.0:{{ consumer_port }}"
-
