Simplify and fix the assertion at docker_partial_events_merging_correctness test

--- a/cases/docker_partial_events_merging_correctness/ansible/config_files/vector.toml
+++ b/cases/docker_partial_events_merging_correctness/ansible/config_files/vector.toml
@@ -13,4 +13,4 @@
   type     = "socket"
   mode     = "tcp"
   address  = "127.0.0.1:{{ tcp_consumer_port }}"
-  encoding = "json"
+  encoding = "text"
