--- a/cases/tcp_to_tcp_performance/ansible/config_files/vector.toml
+++ b/cases/tcp_to_tcp_performance/ansible/config_files/vector.toml
@@ -3,6 +3,7 @@
   address = "0.0.0.0:{{ subject_port }}"
 
 [sinks.out]
-  inputs  = ["in"]
-  type    = "tcp"
-  address = "{{ consumer_instance.ec2_private_ip_address }}:{{ consumer_port }}"
+  inputs   = ["in"]
+  type     = "tcp"
+  address  = "{{ consumer_instance.ec2_private_ip_address }}:{{ consumer_port }}"
+  encoding = "text"
