Switch dstat stop step to use command instead of shell
Signed-off-by: binarylogic <bjohnson@binarylogic.com>

--- a/ansible/roles/profiling/tasks/stop.yml
+++ b/ansible/roles/profiling/tasks/stop.yml
@@ -1,6 +1,8 @@
 ---
 - name: Stop dstat
-  shell: pkill dstat
+  # We use command instead of shell because shell returns a non zero exit code
+  # which fails this step.
+  command: pkill -f "dstat"
 
 - name: Upload dstat CSV to S3
   shell: |
