Extract profiling_results_s3_url to a var and switch S3 upload to command

--- a/ansible/roles/profiling/defaults/main.yml
+++ b/ansible/roles/profiling/defaults/main.yml
@@ -2,3 +2,4 @@
 profiling_results_s3_bucket: '{{ results_s3_bucket_name | mandatory }}'
 profiling_results_s3_dir: |
   name={{ test_name }}/configuration={{ test_configuration }}/subject={{ test_subject }}/version={{ lookup('vars', 'profiling_custom_' + test_subject + '_version', default = lookup('vars', test_subject + '_version')) }}/timestamp={{ test_timestamp }}/hostname={{ inventory_hostname }}
+profiling_results_s3_url: 's3://{{ profiling_results_s3_bucket }}/{{ profiling_results_s3_dir | trim }}/dstat.csv'
