Switch dstat pkill to command, removed comment about exit codes
Both shell and command behave the same regarding the exit codes. It's the
-f that makes this command work. Command, unlike shell, is supposed to
invoke the command directly, on contrary to invoking it via shell. This
might've helped to eliminate the need to use `-f`, but it looks like `-f`
if still required.

--- a/ansible/roles/profiling/tasks/stop.yml
+++ b/ansible/roles/profiling/tasks/stop.yml
@@ -1,8 +1,10 @@
 ---
 - name: Stop dstat
-  # We use command instead of shell because shell returns a non zero exit code
-  # which fails this step.
-  command: pkill -f "dstat"
+  command:
+    argv:
+      - pkill
+      - -f
+      - dstat
 
 - name: Upload dstat CSV to S3
   command:
