--- a/cases/docker_partial_events_merging_correctness/ansible/reset.yml
+++ b/cases/docker_partial_events_merging_correctness/ansible/reset.yml
@@ -1,5 +1,5 @@
 - hosts: '{{ test_namespace }}:&tag_TestRole_subject'
   become: true
   roles:
-    - role: vector
+    - role: subjects
       action: reset
