--- a/cases/regex_parsing_performance/ansible/reset.yml
+++ b/cases/regex_parsing_performance/ansible/reset.yml
@@ -1,21 +1,11 @@
 - hosts: '{{ test_namespace }}:&tag_TestRole_subject'
   become: true
   roles:
-    # - role: fluentbit
-    #   action: reset
-    # - role: fluentd
-    #   action: stop
-    # - role: logstash
-    #   action: reset
-    # - role: splunk_heavy_forwarder
-    #   action: reset
-    # - role: telegraf
-    #   action: reset
-    - role: vector
+    - role: subjects
       action: reset
 
 - hosts: '{{ test_namespace }}:&tag_TestRole_consumer'
   become: true
   roles:
     - role: tcp_test_server
-      action: stop
+      action: reset
