--- a/cases/tcp_to_blackhole_performance/ansible/reset.yml
+++ b/cases/tcp_to_blackhole_performance/ansible/reset.yml
@@ -1,11 +1,5 @@
 - hosts: '{{ test_namespace }}:&tag_TestRole_subject'
   become: true
   roles:
-    - role: fluentbit
-      action: reset
-    - role: fluentd
-      action: stop
-    - role: logstash
-      action: reset
-    - role: vector
+    - role: subjects
       action: reset
