--- a/cases/tcp_to_tcp_performance/ansible/reset.yml
+++ b/cases/tcp_to_tcp_performance/ansible/reset.yml
@@ -1,19 +1,7 @@
 - hosts: '{{ test_namespace }}:&tag_TestRole_subject'
   become: true
   roles:
-    - role: filebeat
-      action: stop
-    - role: fluentbit
-      action: reset
-    - role: fluentd
-      action: stop
-    - role: logstash
-      action: reset
-    - role: splunk_heavy_forwarder
-      action: reset
-    - role: splunk_universal_forwarder
-      action: reset
-    - role: vector
+    - role: subjects
       action: reset
 
 - hosts: '{{ test_namespace }}:&tag_TestRole_consumer'
@@ -22,4 +10,4 @@
     - role: logstash
       action: reset
     - role: tcp_test_server
-      action: stop
+      action: reset
