--- a/ansible/roles/subjects/tasks/reset.yml
+++ b/ansible/roles/subjects/tasks/reset.yml
@@ -1,28 +1,35 @@
 ---
-- include_role: filebeat
+- include_role:
+    name: filebeat
   vars:
     action: reset
 
-- include_role: fluentbit
+- include_role:
+    name: fluentbit
   vars:
     action: reset
 
-- include_role: fluentd
+- include_role:
+    name: fluentd
   vars:
     action: reset
 
-- include_role: logstash
+- include_role:
+    name: logstash
   vars:
     action: reset
 
-- include_role: splunk_heavy_forwarder
+- include_role:
+    name: splunk_heavy_forwarder
   vars:
     action: reset
 
-- include_role: splunk_universal_forwarder
+- include_role:
+    name: splunk_universal_forwarder
   vars:
     action: reset
 
-- include_role: vector
+- include_role:
+    name: vector
   vars:
     action: reset
