--- a/ansible/roles/subjects/tasks/save_facts.yml
+++ b/ansible/roles/subjects/tasks/save_facts.yml
@@ -1,9 +1,15 @@
 ---
 - name: create directory for ansible custom facts
-  file: state=directory recurse=yes path=/etc/ansible/facts.d
+  file:
+    state: directory
+    recurse: yes
+    path: /etc/ansible/facts.d
 
 - name: install subject facts
-  copy: src=subject_versions.fact dest=/etc/ansible/facts.d
+  copy:
+    src: subjects.fact
+    dest: /etc/ansible/facts.d
 
 - name: re-read facts after adding custom fact
-  setup: filter=ansible_local
+  setup:
+    filter: ansible_local
