Update vector config for new version

--- a/ansible/roles/vector/templates/output_for_summary.toml
+++ b/ansible/roles/vector/templates/output_for_summary.toml
@@ -1,4 +1,5 @@
 [sinks.out]
   inputs  = ["{{ input_id }}"]
-  type    = "tcp"
+  type    = "socket"
+  mode    = "tcp"
   address = "127.0.0.1:{{ tcp_consumer_port }}"
