--- a/cases/file_to_tcp_performance/ansible/config_files/vector.toml
+++ b/cases/file_to_tcp_performance/ansible/config_files/vector.toml
@@ -5,5 +5,6 @@
 
 [sinks.out]
   inputs  = ["in"]
-  type    = "tcp"
+  type    = "socket"
+  mode    = "tcp"
   address = "{{ consumer_instance.ec2_private_ip_address }}:{{ consumer_port }}"
