--- a/cases/regex_parsing_performance/ansible/config_files/vector.toml
+++ b/cases/regex_parsing_performance/ansible/config_files/vector.toml
@@ -1,5 +1,6 @@
 [sources.in]
-  type    = "tcp"
+  type    = "socket"
+  mode    = "tcp"
   address = "0.0.0.0:{{ subject_port }}"
 
 [transforms.apache_common_parser]
@@ -9,5 +10,6 @@
 
 [sinks.out]
   inputs  = ["apache_common_parser"]
-  type    = "tcp"
+  type    = "socket"
+  mode    = "tcp"
   address = "{{ consumer_instance.ec2_private_ip_address }}:{{ consumer_port }}"
