--- a/cases/disk_buffer_performance/ansible/config_files/vector.toml
+++ b/cases/disk_buffer_performance/ansible/config_files/vector.toml
@@ -1,12 +1,14 @@
 data_dir = "/var/lib/vector"
 
 [sources.in]
-  type    = "tcp"
+  type    = "socket"
+  mode    = "tcp"
   address = "0.0.0.0:{{ subject_port }}"
 
 [sinks.out]
   inputs  = ["in"]
-  type    = "tcp"
+  type    = "socket"
+  mode    = "tcp"
   address = "{{ consumer_instance.ec2_private_ip_address }}:{{ consumer_port }}"
 
   [sinks.out.buffer]
