--- a/cases/disk_buffer_persistence_correctness/ansible/config_files/vector.toml
+++ b/cases/disk_buffer_persistence_correctness/ansible/config_files/vector.toml
@@ -1,12 +1,14 @@
 data_dir = "/var/lib/vector"
 
 [sources.in]
-  type    = "tcp"
+  type    = "socket"
+  mode    = "tcp"
   address = "127.0.0.1:{{ subject_port }}"
 
 [sinks.out]
   inputs  = ["in"]
-  type    = "tcp"
+  type    = "socket"
+  mode    = "tcp"
   address = "127.0.0.1:{{ tcp_consumer_port }}"
 
   [sinks.out.buffer]
