--- a/cases/file_rotate_truncate_correctness/ansible/config_files/vector.toml
+++ b/cases/file_rotate_truncate_correctness/ansible/config_files/vector.toml
@@ -10,6 +10,7 @@ data_dir = "/var/lib/vector"
 
 [sinks.out]
   inputs   = ["in"]
-  type     = "tcp"
+  type     = "socket"
+  mode     = "tcp"
   address  = "127.0.0.1:{{ tcp_consumer_port }}"
   encoding = "text"
