--- a/cases/file_truncate_correctness/ansible/config_files/vector.toml
+++ b/cases/file_truncate_correctness/ansible/config_files/vector.toml
@@ -5,5 +5,6 @@
 
 [sinks.out]
   inputs  = ["in"]
-  type    = "tcp"
+  type    = "socket"
+  mode    = "tcp"
   address = "127.0.0.1:{{ tcp_consumer_port }}"
