--- a/cases/wrapped_json_correctness/ansible/config_files/vector.toml
+++ b/cases/wrapped_json_correctness/ansible/config_files/vector.toml
@@ -1,5 +1,6 @@
 [sources.in]
-  type    = "tcp"
+  type    = "socket"
+  mode    = "tcp"
   address = "127.0.0.1:{{ subject_port }}"
 
 [transforms.json_decoder]
@@ -13,5 +14,6 @@
 
 [sinks.out]
   inputs  = ["json_unwrapper"]
-  type    = "tcp"
+  type    = "socket"
+  mode    = "tcp"
   address = "127.0.0.1:{{ tcp_consumer_port }}"
