--- a/cases/disk_buffer_persistence_correctness/ansible/bootstrap.yml
+++ b/cases/disk_buffer_persistence_correctness/ansible/bootstrap.yml
@@ -49,7 +49,7 @@
       tcp_server_address: "127.0.0.1:{{ tcp_consumer_port }}"
 
     - role: vector
-      action: install_custom_version
+      action: install
 
     - role: vector
       action: configure
