--- a/cases/docker_partial_events_merging_correctness/ansible/bootstrap.yml
+++ b/cases/docker_partial_events_merging_correctness/ansible/bootstrap.yml
@@ -32,7 +32,7 @@
       action: stop
 
     - role: vector
-      action: install_custom_version
+      action: install
 
     - role: vector
       action: configure
