--- a/cases/file_to_tcp_performance/ansible/bootstrap.yml
+++ b/cases/file_to_tcp_performance/ansible/bootstrap.yml
@@ -53,7 +53,7 @@
           dest: outputs.conf
 
     - role: vector
-      action: install_custom_version
+      action: install
 
     - role: vector
       action: configure
