--- a/cases/tcp_to_blackhole_performance/ansible/bootstrap.yml
+++ b/cases/tcp_to_blackhole_performance/ansible/bootstrap.yml
@@ -38,7 +38,7 @@
       pipeline_file: "config_files/logstash.conf"
 
     - role: vector
-      action: install_custom_version
+      action: install
 
     - role: vector
       action: configure
