--- a/cases/tcp_to_http_performance/ansible/bootstrap.yml
+++ b/cases/tcp_to_http_performance/ansible/bootstrap.yml
@@ -43,7 +43,7 @@
       pipeline_file: "config_files/logstash.conf"
 
     - role: vector
-      action: install_custom_version
+      action: install
 
     - role: vector
       action: configure
