--- a/cases/wrapped_json_correctness/ansible/bootstrap.yml
+++ b/cases/wrapped_json_correctness/ansible/bootstrap.yml
@@ -37,7 +37,7 @@
       pipeline_file: "config_files/logstash.pipeline.conf"
 
     - role: vector
-      action: install_custom_version
+      action: install
 
     - role: vector
       action: configure
