--- a/cases/disk_buffer_performance/ansible/bootstrap.yml
+++ b/cases/disk_buffer_performance/ansible/bootstrap.yml
@@ -60,7 +60,7 @@
           dest: outputs.conf
 
     - role: vector
-      action: install_custom_version
+      action: install
 
     - role: vector
       action: configure
