--- a/cases/file_rotate_truncate_correctness/ansible/bootstrap.yml
+++ b/cases/file_rotate_truncate_correctness/ansible/bootstrap.yml
@@ -52,7 +52,7 @@
           dest: outputs.conf
 
     - role: vector
-      action: install_custom_version
+      action: install
 
     - role: vector
       action: configure
