--- a/cases/file_truncate_correctness/ansible/bootstrap.yml
+++ b/cases/file_truncate_correctness/ansible/bootstrap.yml
@@ -48,7 +48,7 @@
           dest: outputs.conf
 
     - role: vector
-      action: install_custom_version
+      action: install
 
     - role: vector
       action: configure
