--- a/cases/sighup_correctness/ansible/bootstrap.yml
+++ b/cases/sighup_correctness/ansible/bootstrap.yml
@@ -45,7 +45,7 @@
           dest: outputs.conf
 
     - role: vector
-      action: install_custom_version
+      action: install
 
     - role: vector
       action: configure
