Cleanup subject configuration boilerplate
Signed-off-by: binarylogic <bjohnson@binarylogic.com>

--- a/ansible/roles/logstash/defaults/main.yml
+++ b/ansible/roles/logstash/defaults/main.yml
@@ -1,2 +1,3 @@
 ---
-configuration_file: ""
+configuration_file: config_files/logstash.settings.yml
+pipeline_file: config_files/logstash.pipeline.conf
