--- a/ansible/roles/fluentbit/tasks/configure.yml
+++ b/ansible/roles/fluentbit/tasks/configure.yml
@@ -1,7 +1,7 @@
 ---
 - name: Install td-agent-bit configuration files
   template:
-    src: "{{ item.src }}"
-    dest: "/etc/td-agent-bit/{{ item.dest }}"
+    src: "{{ item }}"
+    dest: "/etc/td-agent-bit/{{ item | basename }}"
     mode: 0644
   with_items: "{{ configuration_files }}"
